# fpih

./: .gitignore  README.md
mastermind/: mastermind.cabal  stack.yaml
mastermind/src/: Colors.hs  Events.hs  Main.hs  RandomBoundedEnum.hs  TeaNCurses.hs  Types.hs  Update.hs  View.hs
mastermind/src/UI/NCurses/: Tea.hs
starman/: README.md  starman.cabal
starman/src/: Main.hs
week3/: week3.cabal
week3/src/: Main.hs
week4/: LICENSE  week4.cabal
week4/output/: out.xml
week4/src/: CaesarCipher.hs  JSONTypes.hs  Main.hs  ShowParser.hs
