name:                starman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ScottSedgwick/starman#readme
license:             BSD3
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          ssedgwick@cochlear.com
copyright:           Copyright 1996 Cochlear Ltd
category:            General
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable starman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
